--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,6 +46,9 @@ android {
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
+
+            minifyEnabled true
+            useProguard true
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
